chore: docs update for blog api
